<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drink Mixer</string>
    <string name="presents">Presents...</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_add_to_cart">Add to Cart</string>
    <string name="button_remove_from_cart">Remove from Cart</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Menu</string>
    <string name="title_section3">Cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beam_data">BeamData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Cart Page-->
    <string name="cart_header_drink">Drink</string>
    <string name="cart_header_quantity">Quantity</string>
    <string name="cart_header_price">Price</string>
    <string name="cart_header_total">Total : </string>
    <string name="cart_button">Start Pouring!</string>

    <!--Hardcoded Menu-->
    <string name="drink1">Arnold Palmer</string>
    <string name="drink1_desc">A blend of fresh lemonade and iced tea. Be like Victor! Drink his trash and watch Netflix all day!</string>
    <string name="drink2">Whiskey</string>
    <string name="drink2_desc">Northern Irvine authentic whiskey. Brewed from the freshest corn in grandma Cao\'s basement.</string>
    <string name="drink3">Tequila</string>
    <string name="drink3_desc">Have some spice in your life!</string>
    <string name="drink4">Rum</string>
    <string name="drink4_desc">When life\'s got you down and you just want to forget your troubles.</string>
</resources>
